# amr_software

./: .gitignore  README.md
amr_ui/: CMakeLists.txt  package.xml
amr_ui/config/: setting.yaml
amr_ui/include/amr_ui/: handler.h  handler_utility.h  map_converter.h
amr_ui/launch/: test.launch
amr_ui/map_data/: 1009_map.yaml  readme.md  test_map.yaml
amr_ui/map_data/waypoint/: readme.md  waypoints.txt
amr_ui/scripts/: main_ui.py  map_converter.py  ui_utility.py  waypoint_decision.py
amr_ui/shell_script/: localization.sh  navigation.sh  simulation.sh  slam.sh
amr_ui/src/: handler.cpp  main.cpp  map_converter.cpp
amr_ui/srv/: map_conversion_setting.srv  status.srv
amr_ui/ui/: amr_ui.ui  map_converter_ui.ui  waypoint_decision_ui.ui
amr_ui/ui/img/: image_source.txt
gazebo_simulation/livox_laser_simulation/: CMakeLists.txt
gazebo_simulation/livox_laser_simulation/config/: control.yaml
gazebo_simulation/livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
gazebo_simulation/livox_laser_simulation/launch/: barn_world.launch  control.launch  description.launch  livox_simulation.launch  spawn_ddmr.launch
gazebo_simulation/livox_laser_simulation/models/barn/: model.config  model.sdf
gazebo_simulation/livox_laser_simulation/models/barn/materials/scripts/: barn.material
gazebo_simulation/livox_laser_simulation/models/barn/meshes/: barn.mtl
gazebo_simulation/livox_laser_simulation/rviz/: livox_simulation.rviz
gazebo_simulation/livox_laser_simulation/src/: livox_points_plugin.cpp
gazebo_simulation/livox_laser_simulation/urdf/: gazebo_control.xacro  livox_mid360.xacro  robot_core.xacro  standardrobots_oasis300.xacro
gazebo_simulation/livox_laser_simulation/worlds/: barn.world
mapping/FAST_LIO_gravity_align/: README.md
mapping/FAST_LIO_gravity_align/Log/: mat_pre.txt
mapping/FAST_LIO_gravity_align/config/: mid360.yaml
mapping/FAST_LIO_gravity_align/src/: IMU_Processing.hpp
nav/: CMakeLists.txt  package.xml
nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nav/launch/: follow_waypoints.launch  navigation.launch
nav/rviz/: nav.rviz
nav/scripts/: follow_waypoints.py  main.py  publish_goal.py
nav/urdf/: robot_core.xacro
odom/FAST_LIO_LOCALIZATION/: CMakeLists.txt
odom/FAST_LIO_LOCALIZATION/Log/: mat_pre.txt
odom/FAST_LIO_LOCALIZATION/config/: mid360.yaml
(+6 files in other folders)
